LMS-0391/force-app/main/default/objects/Absence__c/Absence__c.object-meta.xml
<CustomObject>
    <description>This object store all absence related data.</description>
    <label>Absence</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Absence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Absences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>