LMS-0391/force-app/main/default/objects/Absence__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approver_Absences</relationshipName>
    <type>Lookup</type>
</CustomField>