LMS-0391/force-app/main/default/objects/Absence__c/fields/Total_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Days__c</fullName>
    <inlineHelpText>Total days between start and end date excluding weekends and holidays</inlineHelpText>
    <label>Total Days</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>