LMS-0391/force-app/main/default/objects/Absence__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PTO</fullName>
                <default>true</default>
                <label>PTO</label>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>