LMS-0391/force-app/main/default/objects/Absence__c/validationRules/Absence_Dates_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Absence_Dates_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISNULL(Start_Date__c),
ISNULL(End_Date__c)
)</errorConditionFormula>
    <errorMessage>Start date and end date is required.</errorMessage>
</ValidationRule>