LMS-0391/force-app/main/default/objects/Absence__c/validationRules/Absence_Time_Frame_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Absence_Time_Frame_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>Start date must be less than end date</errorMessage>
</ValidationRule>